[gd_scene load_steps=29 format=3 uid="uid://3alnaobov5su"]

[ext_resource type="Script" uid="uid://d3v87fn0u6w6k" path="res://game/levels/tilesets/starting/starting_tile.gd" id="1_oax4i"]
[ext_resource type="Material" uid="uid://rt3lw7cyhjum" path="res://assets/materials/wall_cull_default.tres" id="2_u36ag"]
[ext_resource type="Material" uid="uid://c2jfe1pl3tq71" path="res://assets/materials/wall_nocull_default.tres" id="3_ik6fj"]
[ext_resource type="Texture2D" uid="uid://d35cqi7gfvhe6" path="res://assets/textures/ground/rock023_alb_ht.png" id="4_oax4i"]
[ext_resource type="Texture2D" uid="uid://d3ewcx18b03r1" path="res://assets/textures/ground/rock023_nrm_rgh.png" id="5_uiio4"]

[sub_resource type="Animation" id="Animation_oax4i"]
resource_name = "open_entrance"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors/Entrance/EntranceMesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 5, -5), Vector3(0, -5, -5)]
}

[sub_resource type="Animation" id="Animation_uiio4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors/Entrance/EntranceMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 5, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Doors/Exit/ExitMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 5, 5)]
}

[sub_resource type="Animation" id="Animation_nyahb"]
resource_name = "close_entrance"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors/Entrance/EntranceMesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -5, -5), Vector3(0, 5, -5)]
}

[sub_resource type="Animation" id="Animation_7imhd"]
resource_name = "open_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors/Exit/ExitMesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 5, 5), Vector3(0, -5, 5)]
}

[sub_resource type="Animation" id="Animation_msnsk"]
resource_name = "close_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors/Exit/ExitMesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -5, 5), Vector3(0, 5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uiio4"]
_data = {
&"RESET": SubResource("Animation_uiio4"),
&"close_entrance": SubResource("Animation_nyahb"),
&"close_exit": SubResource("Animation_msnsk"),
&"open_entrance": SubResource("Animation_oax4i"),
&"open_exit": SubResource("Animation_7imhd")
}

[sub_resource type="QuadMesh" id="QuadMesh_j3x5x"]
size = Vector2(10, 10)
orientation = 1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_oax4i"]
points = PackedVector3Array(-5, 0, -5, -5, 0, 5, 5, 0, -5, 5, 0, 5)

[sub_resource type="QuadMesh" id="QuadMesh_u36ag"]
size = Vector2(10, 10)
orientation = 0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_uiio4"]
points = PackedVector3Array(0, 5, 5, 0, 5, -5, 0, -5, 5, 0, -5, -5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_nyahb"]
points = PackedVector3Array(0, 5, 5, 0, 5, -5, 0, -5, 5, 0, -5, -5)

[sub_resource type="QuadMesh" id="QuadMesh_ty1bh"]
flip_faces = true
size = Vector2(10, 10)
orientation = 1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7imhd"]
points = PackedVector3Array(-5, 0, -5, -5, 0, 5, 5, 0, -5, 5, 0, 5)

[sub_resource type="QuadMesh" id="QuadMesh_ik6fj"]
lightmap_size_hint = Vector2i(12, 52)
size = Vector2(2, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_msnsk"]
points = PackedVector3Array(-1, -5, 0, 1, -5, 0, -1, 5, 0, 1, 5, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rfapf"]
points = PackedVector3Array(-1, -5, 0, 1, -5, 0, -1, 5, 0, 1, 5, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_uutua"]
points = PackedVector3Array(-1, -5, 0, 1, -5, 0, -1, 5, 0, 1, 5, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_itxuf"]
points = PackedVector3Array(-1, -5, 0, 1, -5, 0, -1, 5, 0, 1, 5, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_oax4i"]
size = Vector3(10, 10, 1)

[sub_resource type="QuadMesh" id="QuadMesh_nyahb"]
size = Vector2(6, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7imhd"]
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
albedo_texture = ExtResource("4_oax4i")
normal_enabled = true
normal_texture = ExtResource("5_uiio4")
uv1_triplanar = true

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_o8w4x"]
points = PackedVector3Array(-3, -5, 0, 3, -5, 0, -3, 5, 0, 3, 5, 0)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ndjy6"]
points = PackedVector3Array(-3, -5, 0, 3, -5, 0, -3, 5, 0, 3, 5, 0)

[node name="StartingTile" type="Node3D" node_paths=PackedStringArray("enter_point", "exit_point")]
script = ExtResource("1_oax4i")
enter_point = NodePath("ConnectionPoints/Enter")
exit_point = NodePath("ConnectionPoints/Exit")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uiio4")
}

[node name="Geometry" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Geometry"]
mesh = SubResource("QuadMesh_j3x5x")
surface_material_override/0 = ExtResource("2_u36ag")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_oax4i")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.00052, 5, 0)
mesh = SubResource("QuadMesh_u36ag")
surface_material_override/0 = ExtResource("2_u36ag")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_uiio4")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.93341, 5, 0)
mesh = SubResource("QuadMesh_u36ag")
surface_material_override/0 = ExtResource("2_u36ag")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_nyahb")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
mesh = SubResource("QuadMesh_ty1bh")
surface_material_override/0 = ExtResource("2_u36ag")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D4/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_7imhd")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, 5)
mesh = SubResource("QuadMesh_ik6fj")
surface_material_override/0 = ExtResource("3_ik6fj")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D5/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_msnsk")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, 5)
mesh = SubResource("QuadMesh_ik6fj")
surface_material_override/0 = ExtResource("3_ik6fj")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D6/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rfapf")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, -5)
mesh = SubResource("QuadMesh_ik6fj")
surface_material_override/0 = ExtResource("3_ik6fj")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D7/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_uutua")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, -5)
mesh = SubResource("QuadMesh_ik6fj")
surface_material_override/0 = ExtResource("3_ik6fj")

[node name="StaticBody3D" type="StaticBody3D" parent="Geometry/MeshInstance3D8"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geometry/MeshInstance3D8/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_itxuf")

[node name="EnteredArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnteredArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("BoxShape3D_oax4i")

[node name="Doors" type="Node3D" parent="."]

[node name="Entrance" type="Node3D" parent="Doors"]

[node name="EntranceMesh" type="MeshInstance3D" parent="Doors/Entrance"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -5)
mesh = SubResource("QuadMesh_nyahb")
surface_material_override/0 = SubResource("StandardMaterial3D_7imhd")

[node name="StaticBody3D" type="StaticBody3D" parent="Doors/Entrance/EntranceMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Doors/Entrance/EntranceMesh/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_o8w4x")

[node name="Exit" type="Node3D" parent="Doors"]

[node name="ExitMesh" type="MeshInstance3D" parent="Doors/Exit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 5)
mesh = SubResource("QuadMesh_nyahb")
surface_material_override/0 = SubResource("StandardMaterial3D_7imhd")

[node name="StaticBody3D" type="StaticBody3D" parent="Doors/Exit/ExitMesh"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Doors/Exit/ExitMesh/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_ndjy6")

[node name="ConnectionPoints" type="Node3D" parent="."]

[node name="Enter" type="Node3D" parent="ConnectionPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Exit" type="Node3D" parent="ConnectionPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="PlayerPivot" type="Node3D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="EnteredArea" to="." method="_on_entered_area_body_entered"]
